--- a/src/app/amis/amis.component.html
+++ b/src/app/amis/amis.component.html
@@ -1,9 +1,10 @@
+<app-header></app-header>
 <div class="container">
     <h2>Liste des amis</h2>
     <table class="table">
       <thead>
         <tr>
-          <th>Nom d'utilisateur</th>
+          <th>Nom de Schtroumpf</th>
           <th>Rôle</th>
           <th>Supprimer</th>
         </tr>
