--- a/src/app/profil-user/profil-user.component.html
+++ b/src/app/profil-user/profil-user.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container">
     <div class="card">
       <img src="../../assets/profil.png" alt="User Image" class="card-img-top">
