--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -10,7 +10,7 @@
             <input type="password" class="form-control item" id="password" placeholder="Password" formControlName="password">
         </div>
           <div class="form-group f">
-            <button type="submit" class="btn btn-primary">Sign-in</button>            
+            <button type="submit" [disabled]="user.invalid" class="btn btn-primary">Sign-in</button>            
         </div>
         <div class="form-group f">
             <a routerLink="/sign-up">Sign-up</a>
