--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -20,7 +20,7 @@
             </select>
           </div>
         <div class="form-group f">
-            <button type="submit" class="btn btn-primary">Sign-up</button>
+            <button type="submit" [disabled]="user.invalid" class="btn btn-primary">Sign-up</button>
         </div>
         <div class="form-group f">
             <a routerLink="/sign-in">Sign-in</a>
