--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,16 +7,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/home">home</a>
+            <a class="nav-link" routerLink="/home"><mat-icon>home</mat-icon></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/amis">amis</a>
+            <a class="nav-link" routerLink="/amis"><mat-icon >people</mat-icon></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/profil">profil</a>
+            <a class="nav-link" routerLink="/profil"><mat-icon>person</mat-icon></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/sign-in" (click)="logout()">log out</a>
+            <a class="nav-link" routerLink="/sign-in" (click)="logout()"><mat-icon>logout</mat-icon></a>
           </li>
          
         </ul>
