--- a/src/app/profil-user/profil-user.component.html
+++ b/src/app/profil-user/profil-user.component.html
@@ -4,7 +4,7 @@
       <img src="../../assets/profil.png" alt="User Image" class="card-img-top">
       <div class="card-body">
         <h2 class="card-title">{{user.username}}</h2>
-        <h3 class="card-title" *ngIf="!clicked" class="card-text">rôle : {{user.role}}<button (click)="changer()" class="btn btn-primary c">?</button></h3>
+        <h3 class="card-title" *ngIf="!clicked" class="card-text">rôle : {{user.role}}<button (click)="changer()" class="btn btn-primary c"><mat-icon>edit</mat-icon></button></h3>
         <form *ngIf="clicked" [formGroup]="role" (ngSubmit)="modifierSchtroumpf()">
             <div class="form-group">
                 <label for="role">rôle </label>
@@ -16,7 +16,7 @@
                   <option value="Enchanteur">Enchanteur</option>
                 </select>
               </div>
-              <button type="submit" class="btn btn-primary">modifier</button>
+              <button type="submit" class="btn btn-primary b">modifier</button>
         </form>
       </div>
       
