--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -19,6 +19,33 @@
         </tr>
       </tbody>
     </table>
+    <button class="btn btn-primary btn-sm" (click)="addUser()"  >Ajouter un utilisateur</button>
+    <div class="registration-form" *ngIf="added">
+      <form [formGroup]="newuser" (ngSubmit)="register()">
+          <div class="form-icon">
+              <span><i class="icon icon-user"></i></span>
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control item" id="username" placeholder="Username" formControlName="username">
+          </div>
+          <div class="form-group">
+              <input type="password" class="form-control item" id="password" placeholder="Password" formControlName="password">
+          </div>
+          <div class="form-group">
+              <label for="role">rôle </label>
+              <select formControlName="role" class="form-control item" id="role">
+                <option value="Guerrier">Guerrier</option>
+                <option value="Alchimiste">Alchimiste</option>
+                <option value="Sorcier">Sorcier</option>
+                <option value="Espions">Espions</option>
+                <option value="Enchanteur">Enchanteur</option>
+              </select>
+            </div>
+          <div class="form-group f">
+              <button type="submit" [disabled]="user.invalid" class="btn btn-primary">Sign-up</button>
+          </div>
+          </form>
+    </div>
   </div>
   
   
